--- a/crawler4j/build.gradle
+++ b/crawler4j/build.gradle
@@ -13,13 +13,15 @@ configurations.all {
     it.exclude group: 'org.apache.logging.log4j'
 }
 
+// https://stackoverflow.com/questions/23796404/could-not-find-method-compile-for-arguments-gradle
+
 dependencies {
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
-    compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.26'
-    compile group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.26'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.7'
-    compile group: 'com.sleepycat', name: 'je', version: '18.3.12'
-    compile(group: 'org.apache.tika', name: 'tika-parsers', version: '1.20') {
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
+    implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.36'
+    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.36'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
+    implementation group: 'com.sleepycat', name: 'je', version: '18.3.12'
+    implementation(group: 'org.apache.tika', name: 'tika-parsers', version: '1.28.5') {
         exclude(module: 'poi-ooxml')
         exclude(module: 'poi-scratchpad')
         exclude(module: 'poi-ooxml')
@@ -65,24 +67,24 @@ dependencies {
         exclude(module: 'json')
         exclude(module: 'sentiment-analysis-parser')
     }
-    compile group: 'io.github.pgalbraith', name: 'url-detector', version: '0.1.20'
-    compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
-    compile group: 'de.malkusch.whois-server-list', name: 'public-suffix-list', version: '2.2.0'
-    runtime group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    implementation group: 'io.github.pgalbraith', name: 'url-detector', version: '0.1.20'
+    implementation group: 'com.google.guava', name: 'guava', version: '33.2.1-jre'
+    implementation group: 'de.malkusch.whois-server-list', name: 'public-suffix-list', version: '2.2.0'
+    runtimeOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.6'
 
-    testCompile group: 'junit', name: 'junit', version: '4.2'
-    testCompile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.21.0'
-    testCompile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.5.6'
-    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.2-groovy-2.5'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '3.0.1'
+    testImplementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.22'
+    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.4-M4-groovy-3.0'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allJava
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from javadoc.destinationDir
 }
 
