Changed the group name and version number.

--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ allprojects {
     apply plugin: 'idea'
     apply plugin: 'eclipse'
 
-    group = 'edu.uci.ics'
-    version = '4.5.0-SNAPSHOT'
+    group = 'io.github.yasuhiroabe'
+    version = '1.0.0-SNAPSHOT'
 }
 
 subprojects {
