--- a/crawler4j-examples/crawler4j-examples-base/build.gradle
+++ b/crawler4j-examples/crawler4j-examples-base/build.gradle
@@ -1,8 +1,14 @@
+configurations.all {
+    it.exclude group: 'commons-logging'
+    it.exclude group: 'log4j'
+    it.exclude group: 'org.apache.logging.log4j'
+}
+
 dependencies {
     implementation project(':crawler4j')
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
-    implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.36'
-    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.36'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.17'
+    implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: '2.0.17'
+    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '2.0.17'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
     implementation group: 'com.google.guava', name: 'guava', version: '33.2.1-jre'
 }
