--- a/crawler4j-examples/crawler4j-examples-postgres/build.gradle
+++ b/crawler4j-examples/crawler4j-examples-postgres/build.gradle
@@ -8,11 +8,17 @@ repositories {
     maven { url "https://palantir.bintray.com/releases" }
 }
 
+configurations.all {
+    it.exclude group: 'commons-logging'
+    it.exclude group: 'log4j'
+    it.exclude group: 'org.apache.logging.log4j'
+}
+
 dependencies {
     implementation project(':crawler4j')
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.36'
-    implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.36'
-    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.36'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.17'
+    implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: '2.0.17'
+    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '2.0.17'
 
     // original is followings
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
