--- a/crawler4j-examples/crawler4j-examples-postgres/build.gradle
+++ b/crawler4j-examples/crawler4j-examples-postgres/build.gradle
@@ -5,7 +5,7 @@ plugins {
 repositories {
     mavenCentral()
     // Needed for 'com.palantir.docker.compose'
-    maven { url "https://palantir.bintray.com/releases" }
+    maven { url = "https://palantir.bintray.com/releases" }
 }
 
 configurations.all {
