--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ allprojects {
     apply plugin: 'eclipse'
 
     group = 'io.github.yasuhiroabe'
-    version = '1.0.3'
+    version = '1.0.4-SNAPSHOT'
 }
 
 subprojects {
