--- a/crawler4j/build.gradle
+++ b/crawler4j/build.gradle
@@ -38,9 +38,9 @@ dependencies {
     runtimeOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.5.18'
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
-    testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '3.0.1'
-    testImplementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.22'
-    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.4-M4-groovy-3.0'
+    testImplementation group: 'org.wiremock', name: 'wiremock', version: '3.13.1'
+    testImplementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.25'
+    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.4-M5-groovy-3.0'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
