--- a/crawler4j-examples/crawler4j-examples-postgres/build.gradle
+++ b/crawler4j-examples/crawler4j-examples-postgres/build.gradle
@@ -23,7 +23,8 @@ dependencies {
     // original is followings
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.7'
     implementation group: 'com.mchange', name: 'c3p0', version: '0.11.2'
-    implementation group: 'org.flywaydb', name: 'flyway-core', version: '9.22.3'
+    implementation group: 'org.flywaydb', name: 'flyway-core', version: '11.11.2'
+    implementation group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '11.11.2'
     implementation group: 'com.google.guava', name: 'guava', version: '33.4.8-jre'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation group: 'com.palantir.docker.compose', name: 'docker-compose-rule-junit4', version: '2.3.0'
