--- a/crawler4j/build.gradle
+++ b/crawler4j/build.gradle
@@ -39,8 +39,9 @@ dependencies {
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation group: 'org.wiremock', name: 'wiremock', version: '3.13.1'
-    testImplementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.25'
-    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.4-M5-groovy-3.0'
+    testImplementation group: 'org.apache.groovy', name: 'groovy', version: '4.0.20'
+    testImplementation group: 'org.apache.groovy', name: 'groovy-templates', version: '4.0.20'
+    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.4-M5-groovy-4.0'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
